# aerial_global_planner

./: CMakeLists.txt  README.md  package.xml
scripts/: global_planner.py
